# bring-me-leeds-crew

./: .env.example  .gitignore  README.md  proposals.json  pyproject.toml
knowledge/: proposal_template.md  website_templates.json
knowledge/templates/: fitness.html  general.html  restaurant.html  spa.html
src/lead_hunter/: crew.py  main.py
src/lead_hunter/config/: agents.yaml  tasks.yaml
src/lead_hunter/tools/: email_sender.py  github_pages_deployer.py  gmail_draft_tool.py  google_maps_tool.py  website_generator.py
